--- a/css/stylremove.css
+++ b/css/stylremove.css
@@ -55,28 +55,8 @@ img {
 
 .container {
   max-width: 1158px;
-
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 0 15px;
   margin: 0 auto;
-}
-
-@media screen and (min-width: 428px) {
-  .container {
-    width: 428px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1158px;
-  }
 }
 
 .visually-hidden {
@@ -91,6 +71,7 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 /*header*/
 .header {
   border-bottom: 1px solid var(--border-filter-color);
@@ -189,9 +170,9 @@ img {
 
 /*hero*/
 .hero {
-  padding: 112px 0px;
-  /* height: 600px;
-  max-width: 1440px; */
+  padding: 188px 0px;
+  height: 600px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(
@@ -206,52 +187,23 @@ img {
   background-position: center;
   background-size: cover;
 }
-
-@media screen and (min-width: 1200px) {
-  .hero {
-    padding: 188px 0px;
-  }
-}
-
 .hero-title {
-  margin: auto;
-  margin-bottom: 72px;
-  width: 320px;
+  width: 494px;
+
+  margin-bottom: 48px;
+  display: inline-block;
 
   color: var(--white-color);
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
+  font-size: 56px;
+  line-height: 1.07;
 }
-
-@media screen and (min-width: 768px) {
-  .hero-title {
-    margin-bottom: 36px;
-
-    width: 496px;
-
-    font-size: 56px;
-    line-height: 1.07;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-title {
-    margin-bottom: 48px;
-
-    font-size: 56px;
-  }
-}
-
 .button-hero {
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 16px 32px;
-  /* display: flex; */
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   background: var(--brend-color);
@@ -270,122 +222,48 @@ img {
 }
 /*section-features */
 .features {
-  padding: 96px 0;
-}
-
-@media screen and (min-width: 1200px) {
-  .features {
-    padding: 120px 0;
-  }
+  padding-top: 120px;
 }
 
 .features-list > li {
-  /* width: calc((100% - 72px) / 4); */
+  width: calc((100% - 72px) / 4);
 }
 
 .features-list {
-}
-
-@media screen and (min-width: 428px) {
-  .features-list {
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .features-list {
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features-list {
-    gap: 24px;
-    display: flex;
-  }
+  gap: 24px;
+  display: flex;
 }
 
 .icon-container {
-  display: none;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+  border-radius: 4px;
 
-@media screen and (min-width: 1200px) {
-  .icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 264px;
-    height: 112px;
-    margin-bottom: 8px;
-    border-radius: 4px;
-
-    background-color: var(--background-color-team);
-  }
+  background-color: var(--background-color-team);
 }
 
 .svg-features {
   width: 64px;
   height: 64px;
 }
-
 .section-subtile {
-  text-align: center;
   margin-bottom: 8px;
 
   color: var(--title-color);
-
-  font-size: 36px;
-  line-height: 1.11;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
 }
-
-@media screen and (min-width: 428px) {
-  .section-subtile {
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section-subtile {
-    text-align: left;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .section-subtile {
-    text-align: center;
-    margin-bottom: 8px;
-
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-  }
-}
-
 .section-paragraph {
   color: var(--main-color);
 
-  font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-@media screen and (min-width: 428px) {
-  .section-paragraph {
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section-paragraph {
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .section-paragraph {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-  }
 }
 
 /*section-What are we doing*/
