--- a/css/styles.css
+++ b/css/styles.css
@@ -190,8 +190,8 @@ img {
 /*hero*/
 .hero {
   padding: 112px 0px;
-  /* height: 600px;
-  max-width: 1440px; */
+  /* height: 600px; */
+  /* max-width: 1440px; */
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(
@@ -216,7 +216,7 @@ img {
 .hero-title {
   margin: auto;
   margin-bottom: 72px;
-  width: 320px;
+  /* width: 320px; */
 
   color: var(--white-color);
 
@@ -584,17 +584,59 @@ img {
 /*customers*/
 
 .Customers {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1200px) {
+  .Customers {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
 .customers-list {
-  gap: 24px;
+  gap: 72px 16px;
   display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 428px) {
+  .customers-list {
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers-list {
+    justify-content: center;
+    gap: 72px 25px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-list {
+    flex-wrap: nowrap;
+  }
 }
 
 .customers-item {
-  width: 168px;
+  width: 190px;
+}
+
+@media screen and (min-width: 428px) {
+  .customers-item {
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers-item {
+    width: 168px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-item {
+  }
 }
 
 .customers-link:hover,
@@ -1006,21 +1048,61 @@ textarea:focus {
 
 /*footer-text*/
 .section-footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 98px;
+  padding-bottom: 96px;
   background-color: var(--title-color);
+}
+
+@media screen and (min-width: 768px) {
+  .section-footer {
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .container-footer {
-  display: flex;
+  /* display: flex; */
   background-color: var(--title-color);
 }
 
-.footer-logo-p {
-  display: block;
-  margin-right: 120px;
+@media screen and (min-width: 768px) {
+  .tablet-container {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
 }
+
+@media screen and (min-width: 1200px) {
+  .tablet-container {
+  }
+}
+
+.footer-logo-p {
+  text-align: center;
+  display: block;
+  margin-bottom: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-logo-p {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-logo-p {
+    margin-right: 120px;
+  }
+}
+
 .footer-text {
+  margin: 0 auto;
   max-width: 264px;
   color: #e7e9fc;
   line-height: 1.5;
@@ -1041,15 +1123,28 @@ textarea:focus {
 .footer-social-media {
   display: block;
 
-  margin-right: 80px;
+  margin-bottom: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-social-media {
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-social-media {
+    margin-right: 80px;
+  }
 }
 
 .footer-title {
   margin-bottom: 16px;
+  text-align: center;
+
+  color: var(--white-color);
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--white-color);
 }
 
 .footer-social-list {
@@ -1089,7 +1184,19 @@ textarea:focus {
 /* subscribe-footer */
 
 .section-subscribe {
+  text-align: center;
   max-width: 453px;
+}
+
+@media screen and (min-width: 768px) {
+  .section-subscribe {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-subscribe {
+  }
 }
 
 .subscribe-footer {
@@ -1102,8 +1209,37 @@ textarea:focus {
   letter-spacing: 0.02em;
 }
 
-.form-field-footer {
+@media screen and (min-width: 768px) {
+  .subscribe-footer {
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-footer {
+  }
+}
+
+.subscribe {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe {
+    flex-direction: row;
+    justify-content: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe {
+  }
+}
+
+.form-field-footer {
+  /* display: flex; */
 }
 
 .form-field-footer input::placeholder {
@@ -1116,13 +1252,22 @@ textarea:focus {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 
   border-radius: 4px;
-  margin-right: 24px;
   padding-left: 16px;
 
   color: var(--border-filter-color);
 
   height: 40px;
-  width: 264px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .input-footer {
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .input-footer {
+  }
 }
 
 input::placeholder {
@@ -1139,6 +1284,7 @@ input::placeholder {
   display: flex;
   align-items: center;
 
+  margin: 0 auto;
   padding: 0 24px 0 24px;
   border-radius: 4px;
 
