--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ img {
 }
 
 .container {
-  max-width: 1158px;
+  max-width: 428px;
 
   padding-left: 16px;
   padding-right: 16px;
@@ -63,19 +63,19 @@ img {
 
 @media screen and (min-width: 428px) {
   .container {
-    width: 428px;
+    max-width: 428px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1158px;
+    max-width: 1158px;
   }
 }
 
@@ -1070,6 +1070,9 @@ textarea:focus {
 .container-footer {
   background-color: var(--title-color);
 }
+.tablet-container {
+  margin-bottom: 72px;
+}
 
 @media screen and (min-width: 768px) {
   .tablet-container {
@@ -1123,8 +1126,6 @@ textarea:focus {
 
 .footer-social-media {
   display: block;
-
-  margin-bottom: 72px;
 }
 
 @media screen and (min-width: 768px) {
