--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -56,9 +60,10 @@ img {
 .container {
   max-width: 428px;
 
-  padding-left: 16px;
-  padding-right: 16px;
-  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 428px) {
@@ -98,29 +103,33 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-container {
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .header-container {
+    justify-content: space-between;
 
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .header-container {
+  .container-nav {
+    align-items: center;
+    display: flex;
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .header-container {
-  }
-}
-
-.container-nav {
-  align-items: center;
-  display: flex;
 }
 
 .menu-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .logo {
@@ -160,16 +169,20 @@ img {
   }
 }
 
+.nav-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
 .nav-link {
   position: relative;
-
-  padding-top: 24px;
-  padding-bottom: 24px;
   display: block;
+
   color: var(--main-color);
+
   text-decoration: none;
-  font-weight: 500;
-  line-height: 1.5;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
 
   transition-property: color;
@@ -177,15 +190,29 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link.current::after {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  content: '';
-  background-color: currentColor;
+@media screen and (min-width: 768px) {
+  .nav-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin-bottom: 0;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link.current::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    content: '';
+    background-color: currentColor;
+  }
 }
 
 .nav-link:hover,
@@ -194,6 +221,10 @@ img {
 }
 
 .site-nav .current {
+  color: var(--active-color);
+}
+
+.site-nav-mobile .current {
   color: var(--active-color);
 }
 .site-nav.nav-link .carrent:active {
@@ -223,10 +254,35 @@ img {
 
 .address-link {
   color: var(--main-color);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+
   font-style: normal;
-  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .address-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+}
+
+.address-mobile {
+  margin-bottom: 48px;
+}
+
+.address-link-tel {
+  margin-bottom: 40px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
 }
 
 .menu-button {
@@ -239,26 +295,66 @@ img {
   background-color: transparent;
 }
 
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.icon-cross.is-open .menu-button {
-  display: none;
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .icon-menu {
   stroke: var(--title-color);
 }
 
+.mobile-menu {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+
+  background-color: var(--white-color);
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.close-mobile-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: var(--border-filter-color);
+  stroke: var(--title-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.close-mobile-svg {
+  width: 100%;
+  height: 8px;
+}
+
+.social-list-header {
+  justify-content: center;
+  gap: 56px;
+  display: flex;
+}
+
 /*hero*/
 .hero {
   padding: 112px 0px;
-  /* height: 600px; */
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
@@ -281,10 +377,20 @@ img {
   }
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office@2x.jpg);
+  }
+}
 .hero-title {
   margin: auto;
   margin-bottom: 72px;
-  /* width: 320px; */
 
   color: var(--white-color);
 
@@ -319,7 +425,6 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 16px 32px;
-  /* display: flex; */
   margin-left: auto;
   margin-right: auto;
   background: var(--brend-color);
@@ -347,20 +452,11 @@ img {
   }
 }
 
-.features-list > li {
-  /* width: calc((100% - 72px) / 4); */
-}
-
 .features-list {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
   column-gap: 24px;
-}
-
-@media screen and (min-width: 428px) {
-  .features-list {
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -377,9 +473,6 @@ img {
   }
 }
 
-.features-item {
-}
-
 @media screen and (min-width: 428px) {
   .features-item {
   }
@@ -390,11 +483,6 @@ img {
     display: flex;
     flex-wrap: wrap;
     flex-basis: calc((100% - 24px) / 2);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features-item {
   }
 }
 
@@ -432,11 +520,6 @@ img {
   letter-spacing: 0.02em;
 }
 
-@media screen and (min-width: 428px) {
-  .section-subtile {
-  }
-}
-
 @media screen and (min-width: 768px) {
   .section-subtile {
     text-align: left;
@@ -462,16 +545,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-@media screen and (min-width: 428px) {
-  .section-paragraph {
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section-paragraph {
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -544,32 +617,12 @@ img {
   text-transform: capitalize;
 }
 
-@media screen and (min-width: 428px) {
-  .section-title {
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section-title {
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .section-title {
-  }
-}
-
 .team-list {
   gap: 72px;
   display: flex;
   text-align: center;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-@media screen and (min-width: 428px) {
-  .team-list {
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -669,11 +722,6 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (min-width: 428px) {
-  .customers-list {
-  }
-}
-
 @media screen and (min-width: 768px) {
   .customers-list {
     justify-content: center;
@@ -691,19 +739,9 @@ img {
   width: 190px;
 }
 
-@media screen and (min-width: 428px) {
-  .customers-item {
-  }
-}
-
 @media screen and (min-width: 768px) {
   .customers-item {
     width: 168px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .customers-item {
   }
 }
 
@@ -1152,7 +1190,6 @@ textarea:focus {
 @media screen and (min-width: 768px) {
   .tablet-container {
     display: flex;
-    /* justify-content: center; */
     gap: 24px;
   }
 }
@@ -1203,11 +1240,6 @@ textarea:focus {
 
 .footer-social-media {
   display: block;
-}
-
-@media screen and (min-width: 768px) {
-  .footer-social-media {
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1273,11 +1305,6 @@ textarea:focus {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .section-subscribe {
-  }
-}
-
 .subscribe-footer {
   margin-bottom: 16px;
 
@@ -1286,16 +1313,6 @@ textarea:focus {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-@media screen and (min-width: 768px) {
-  .subscribe-footer {
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .subscribe-footer {
-  }
 }
 
 .subscribe {
@@ -1310,11 +1327,6 @@ textarea:focus {
     display: flex;
     flex-direction: row;
     justify-content: start;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .subscribe {
   }
 }
 
@@ -1348,11 +1360,6 @@ textarea:focus {
     margin-right: 24px;
     margin-bottom: 0px;
     width: 100%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .input-footer {
   }
 }
 
