--- a/css/styles.css
+++ b/css/styles.css
@@ -455,12 +455,12 @@ img {
 }
 /*section-features */
 .features {
-  padding: 96px 0;
+  padding-top: 96px;
 }
 
 @media screen and (min-width: 1200px) {
   .features {
-    padding: 120px 0;
+    padding-top: 120px;
   }
 }
 
